# netscope-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  Dockerfile  ENHANCEMENTS_DESIGN.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  netscope.rb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: cli-reference.md  manual.md
netscope/: __init__.py  __main__.py  __version__.py
netscope/cli/: __init__.py  explain_content.py  formatters.py  glossary_content.py  main.py  target_resolver.py
netscope/core/: __init__.py  config.py  detector.py  executor.py
netscope/modules/: __init__.py  arp_scan.py  arp_scan_enhanced.py  bandwidth.py  base.py  connectivity.py  dns.py  nmap_scan.py  ping_sweep.py  ports.py  security.py  security_audit.py
netscope/parallel/: executor.py
netscope/report/: html_report.py  notebook_report.py
netscope/storage/: __init__.py  csv_handler.py  logger.py
netscope/tui/: dashboard.py  visualizations.py
netscope/utils/: __init__.py  mac_vendor.py  network.py  network_info.py
output/2026-02-12_212429_ping_test/: metadata.json  results.csv
output/2026-02-12_212612_ping_test/: metadata.json  results.csv
output/2026-02-12_220215_traceroute_test/: metadata.json  results.csv
output/2026-02-12_220526_ping_test/: metadata.json  results.csv
output/2026-02-12_223030_quick_network_check/: metadata.json  results.csv
output/2026-02-12_223600_quick_network_check/: metadata.json  results.csv
output/2026-02-12_232634_port_scan/: metadata.json  results.csv
output/2026-02-13_090443_quick_network_check/: metadata.json  results.csv
output/2026-02-13_090808_ping_test/: metadata.json  results.csv
output/2026-02-13_115033_quick_network_check/: metadata.json  results.csv
output/2026-02-13_115629_quick_network_check/: metadata.json  report.html  results.csv
output/2026-02-13_121832_quick_network_check/: metadata.json  results.csv
output/2026-02-13_124044_traceroute_test/: metadata.json  results.csv
output/2026-02-13_140127_arp_scan/: metadata.json  results.csv
output/2026-02-13_141551_traceroute_test/: metadata.json  results.csv
output/2026-02-13_163743_ping_test/: metadata.json  results.csv
output/2026-02-13_163903_traceroute_test/: metadata.json  results.csv
output/2026-02-13_164831_dns_lookup/: metadata.json  results.csv
output/2026-02-13_164943_arp_scan/: metadata.json  results.csv
output/2026-02-13_223921_ping_test/: metadata.json  results.csv
output/2026-02-13_224114_ping_test/: metadata.json  results.csv
output/2026-02-13_225303_quick_network_check/: metadata.json  results.csv
output/2026-02-13_230608_arp_scan/: metadata.json  results.csv
output/2026-02-13_231822_ping_sweep/: metadata.json
output/2026-02-13_231850_arp_scan/: metadata.json  results.csv
output/2026-02-13_232012_arp_scan/: metadata.json  results.csv
output/2026-02-13_232737_arp_scan/: metadata.json  results.csv
output/2026-02-13_233116_speedtest/: results.csv
output/2026-02-13_233629_speedtest/: metadata.json  results.csv
tests/: __init__.py  test_config.py  test_executor.py  test_parallel.py
